<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/discussion_button"
            android:maxWidth="15dp"
            android:maxHeight="15dp"
            android:enabled="true"

            android:icon="@drawable/alert"
            android:title="@string/discussion"
            app:showAsAction="always" />
        <item
            android:maxWidth="15dp"
            android:maxHeight="15dp"
            android:id="@+id/scan_button"
            android:enabled="true"
            android:icon="@drawable/scan"
            android:title="@string/scan"

            app:showAsAction="always" />
        <item
            android:maxWidth="15dp"
            android:maxHeight="15dp"
            android:id="@+id/service_search_button"
            android:enabled="true"
            android:icon="@drawable/customer"
            android:title="@string/services"
            android:textSize="8sp"
            app:showAsAction="always" />
        <item
            android:maxWidth="15dp"
            android:maxHeight="15dp"
            android:id="@+id/profile_menu_bottom"
            android:enabled="true"
            android:icon="@drawable/customer"
            android:title="@string/profile"
            android:textSize="8sp"
            app:showAsAction="always" />

</menu>