<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/hair_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/menu_title_margin_top"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hair_profile_title"
        android:textSize="@dimen/menu_font_size" />


    <TextView
        android:id="@+id/settings_natural_hair_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/submenu_font_size"
        android:text="@string/settings_natural_hair_type" />
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="47dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/hair_type1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:foreground="@drawable/hair_type_selector"
            android:padding="10dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/hair1" />

        <ImageButton
            android:id="@+id/hair_type2"
            android:background="#00FFFFFF"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/hair2" />

        <ImageButton
            android:id="@+id/hair_type3"
            android:layout_width="40dp"
            android:background="#00FFFFFF"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/hair3" />
        <ImageButton
            android:id="@+id/hair_type4"
            android:background="#00FFFFFF"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/hair4" />
    </LinearLayout>
    <TextView
        android:id="@+id/settings_hair_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top_hair_profile"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/submenu_font_size"
        android:text="@string/hair_length" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="47dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top_hair_profile"
        android:layout_marginEnd="47dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Switch
            android:id="@+id/hair_locked_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/hair_locked" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top_hair_profile"
        android:layout_marginEnd="47dp"

        android:orientation="horizontal">
        <Switch
            android:id="@+id/hair_chemically_treated_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/hair_chemically_treated" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top_hair_profile"
        android:layout_marginEnd="47dp"
        android:orientation="horizontal">


        <Switch
            android:id="@+id/hair_colored_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/hair_colored" />

    </LinearLayout>


</LinearLayout>