<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:src="@drawable/tangl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:strokeWidth="2"
        android:text="@string/login_button"
        android:textColor="#76A9C1"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="#76A9C1" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#76A9C1"
        android:text="@string/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="573dp" />

    <ImageButton
        android:id="@+id/google_login_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/google"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="601dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button">


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>